# animation-vedio-generator

./: .env  .env.example  .gitignore  COMFYUI_SETUP.md  README.md  main.py  play.ipynb  pyproject.toml  setup.sh
agents/: animation_agent.py  editor_upload.py  script_writer.py  story_character.py  trend_researcher.py  voiceover_agent.py
pipeline/: comfyui_client.py  comfyui_workflows.py  ollama_client.py  orchestrator.py  quality_gate.py  state.py
tools/: test_pipeline.py
webui/: server.py
webui/templates/: index.html
